--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,11 @@ body {
   background-color: #006400;
   color: white;
 }
+
+#header {
+  width:990px;
+  height:90px;
+  background-color:#614126;
+  margin:0;
+  padding:5px;
+}
