--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,9 @@ body {
 }
 
 #header {
-  float: left;
-  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  background-color:#614126;
 }
