--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,15 @@ body {
 }
 
 #header {
+  
+/*  width:990px;
+  height:90px;
+  background-color:#614126;
+  margin:0;
+  padding:5px;*/
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  background-color:#614126;
+  background-color:#b3fbdc;
 }
